ham-wrapped small ui fixes

--- a/qsomap/static/ham-wrapped/index.html
+++ b/qsomap/static/ham-wrapped/index.html
@@ -13,9 +13,10 @@
         <section id="upload-section" class="screen active">
             <div class="container">
                 <div class="logo">
-                    <span class="logo-icon">📻</span>
+                    <!-- <span class="logo-icon">📻</span> -->
                     <h1 data-i18n="appTitle">Ham Wrapped</h1>
                     <p class="subtitle">2025</p>
+                    <p class="tagline" data-i18n="appSubtitle">Twoje krótkofalarskie podsumowanie roku</p>
                 </div>
 
                 <div class="callsign-input">
